Fixed Brand Bar Overflow
Used position:sticky instead of position:fixed to avoid the Logo overflowing outside of Brand Bar when making screensize smaller

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -54,13 +54,13 @@
   }
 
   .layout__brandBar {
-    min-height: 100vh;
+    display: block;
     background-attachment: fixed;
   }
 
   .layout__brandBarInner {
-    position: fixed;
-    width: unset;
+    position: sticky;
+    top:4rem;
   }
 
   .layout__brandBarMoth {
